--- a/Pandas_Test.ipynb
+++ b/Pandas_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "id": "556cdf0e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "id": "f7e4d55d",
    "metadata": {
     "scrolled": true,
@@ -24,7 +24,7 @@
      "data": {
       "text/plain": "0    1.0\n1    2.0\n2    NaN\n3    4.0\n4    5.0\n5    5.0\ndtype: float64"
      },
-     "execution_count": 76,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 89,
    "id": "13ba66e3",
    "metadata": {
     "tags": []
@@ -45,7 +45,7 @@
      "data": {
       "text/plain": "DatetimeIndex(['2022-02-01', '2022-02-02', '2022-02-03', '2022-02-04',\n               '2022-02-05', '2022-02-06'],\n              dtype='datetime64[ns]', freq='D')"
      },
-     "execution_count": 77,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "id": "11f05092",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "            Cat Empire      USSR  Great Baguette  Ice Empire\n2022-02-01   -1.102996  0.576302        0.605766    1.444695\n2022-02-02   -1.561871  2.970526        1.024296   -1.030074\n2022-02-03   -1.983858 -0.816020       -0.781527    0.134082\n2022-02-04    0.065359  0.491605       -1.455970    0.342882\n2022-02-05    0.117468 -1.270719       -1.718680    0.047404\n2022-02-06    0.087148 -1.025645        1.019578    0.848954",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Cat Empire</th>\n      <th>USSR</th>\n      <th>Great Baguette</th>\n      <th>Ice Empire</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-02-01</th>\n      <td>-1.102996</td>\n      <td>0.576302</td>\n      <td>0.605766</td>\n      <td>1.444695</td>\n    </tr>\n    <tr>\n      <th>2022-02-02</th>\n      <td>-1.561871</td>\n      <td>2.970526</td>\n      <td>1.024296</td>\n      <td>-1.030074</td>\n    </tr>\n    <tr>\n      <th>2022-02-03</th>\n      <td>-1.983858</td>\n      <td>-0.816020</td>\n      <td>-0.781527</td>\n      <td>0.134082</td>\n    </tr>\n    <tr>\n      <th>2022-02-04</th>\n      <td>0.065359</td>\n      <td>0.491605</td>\n      <td>-1.455970</td>\n      <td>0.342882</td>\n    </tr>\n    <tr>\n      <th>2022-02-05</th>\n      <td>0.117468</td>\n      <td>-1.270719</td>\n      <td>-1.718680</td>\n      <td>0.047404</td>\n    </tr>\n    <tr>\n      <th>2022-02-06</th>\n      <td>0.087148</td>\n      <td>-1.025645</td>\n      <td>1.019578</td>\n      <td>0.848954</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "            Cat Empire      USSR  Great Baguette  Ice Empire\n2022-02-01   -0.487021 -0.282208       -0.662784   -1.935681\n2022-02-02   -0.400023 -1.445082        0.753807   -0.371071\n2022-02-03   -0.674999  0.655188        0.788220    1.874401\n2022-02-04    0.368368 -1.551035        1.189446    1.347579\n2022-02-05   -1.246911 -1.607427        1.036672   -1.563930\n2022-02-06    0.325237  0.160492       -2.524744    0.906057",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Cat Empire</th>\n      <th>USSR</th>\n      <th>Great Baguette</th>\n      <th>Ice Empire</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-02-01</th>\n      <td>-0.487021</td>\n      <td>-0.282208</td>\n      <td>-0.662784</td>\n      <td>-1.935681</td>\n    </tr>\n    <tr>\n      <th>2022-02-02</th>\n      <td>-0.400023</td>\n      <td>-1.445082</td>\n      <td>0.753807</td>\n      <td>-0.371071</td>\n    </tr>\n    <tr>\n      <th>2022-02-03</th>\n      <td>-0.674999</td>\n      <td>0.655188</td>\n      <td>0.788220</td>\n      <td>1.874401</td>\n    </tr>\n    <tr>\n      <th>2022-02-04</th>\n      <td>0.368368</td>\n      <td>-1.551035</td>\n      <td>1.189446</td>\n      <td>1.347579</td>\n    </tr>\n    <tr>\n      <th>2022-02-05</th>\n      <td>-1.246911</td>\n      <td>-1.607427</td>\n      <td>1.036672</td>\n      <td>-1.563930</td>\n    </tr>\n    <tr>\n      <th>2022-02-06</th>\n      <td>0.325237</td>\n      <td>0.160492</td>\n      <td>-2.524744</td>\n      <td>0.906057</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 78,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 91,
    "id": "a006333c",
    "metadata": {
     "scrolled": true,
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 92,
    "id": "91e01e99",
    "metadata": {
     "tags": []
@@ -168,7 +168,7 @@
       "text/plain": "             Iron  Oil Stone Aluminum Gold Tungsten Uranium Copper Wood\nUrumqi        NaN  0.2   0.8      NaN  NaN      NaN     NaN    NaN  NaN\nLanzhou       NaN  0.1   0.3      NaN  NaN      NaN     NaN    NaN  NaN\nHohhot        0.4  NaN   0.3      NaN  NaN      NaN     NaN    NaN  NaN\nXining        NaN  0.1   0.7      NaN  NaN      NaN     NaN    NaN  NaN\nYinchuan      NaN  0.2   0.4      NaN  NaN      NaN     NaN    NaN  0.1\n...           ...  ...   ...      ...  ...      ...     ...    ...  ...\nChangchun     NaN  0.1   NaN      0.3  NaN      NaN     NaN    NaN  0.7\nHarbin        NaN  NaN   NaN      0.3  NaN      NaN     NaN    NaN  0.3\nExurbia City  0.5  NaN   0.1      NaN  NaN      NaN     NaN    NaN  0.4\nHazy Cloud    NaN  0.3   0.3      NaN  NaN      NaN     NaN    NaN  1.5\nMilabo Port   NaN  0.1   0.4      NaN  NaN      NaN     NaN    0.4  1.2\n\n[68 rows x 9 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Iron</th>\n      <th>Oil</th>\n      <th>Stone</th>\n      <th>Aluminum</th>\n      <th>Gold</th>\n      <th>Tungsten</th>\n      <th>Uranium</th>\n      <th>Copper</th>\n      <th>Wood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Urumqi</th>\n      <td>NaN</td>\n      <td>0.2</td>\n      <td>0.8</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Lanzhou</th>\n      <td>NaN</td>\n      <td>0.1</td>\n      <td>0.3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Hohhot</th>\n      <td>0.4</td>\n      <td>NaN</td>\n      <td>0.3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Xining</th>\n      <td>NaN</td>\n      <td>0.1</td>\n      <td>0.7</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Yinchuan</th>\n      <td>NaN</td>\n      <td>0.2</td>\n      <td>0.4</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>Changchun</th>\n      <td>NaN</td>\n      <td>0.1</td>\n      <td>NaN</td>\n      <td>0.3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.7</td>\n    </tr>\n    <tr>\n      <th>Harbin</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.3</td>\n    </tr>\n    <tr>\n      <th>Exurbia City</th>\n      <td>0.5</td>\n      <td>NaN</td>\n      <td>0.1</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.4</td>\n    </tr>\n    <tr>\n      <th>Hazy Cloud</th>\n      <td>NaN</td>\n      <td>0.3</td>\n      <td>0.3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1.5</td>\n    </tr>\n    <tr>\n      <th>Milabo Port</th>\n      <td>NaN</td>\n      <td>0.1</td>\n      <td>0.4</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.4</td>\n      <td>1.2</td>\n    </tr>\n  </tbody>\n</table>\n<p>68 rows × 9 columns</p>\n</div>"
      },
-     "execution_count": 80,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "id": "0eed34d0-280c-4e6a-b00b-01ed01680f15",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
    "id": "b106f9a7",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 95,
    "id": "f5f0b633",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
       "text/plain": "                   Iron       Oil   Stone       Aluminum Gold Tungsten  \\\nUrumqi                   oil mine  quarry                                \nLanzhou                            quarry                                \nHohhot        iron mine            quarry                                \nXining                             quarry                                \nYinchuan                 oil mine  quarry                                \n...                 ...       ...     ...            ...  ...      ...   \nChangchun                                  aluminum mine                 \nHarbin                                     aluminum mine                 \nExurbia City  iron mine                                                  \nHazy Cloud               oil mine  quarry                                \nMilabo Port                        quarry                                \n\n             Uranium       Copper     Wood  \nUrumqi                                      \nLanzhou                                     \nHohhot                                      \nXining                                      \nYinchuan                                    \n...              ...          ...      ...  \nChangchun                          logging  \nHarbin                             logging  \nExurbia City                       logging  \nHazy Cloud                         logging  \nMilabo Port           copper mine  logging  \n\n[68 rows x 9 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Iron</th>\n      <th>Oil</th>\n      <th>Stone</th>\n      <th>Aluminum</th>\n      <th>Gold</th>\n      <th>Tungsten</th>\n      <th>Uranium</th>\n      <th>Copper</th>\n      <th>Wood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Urumqi</th>\n      <td></td>\n      <td>oil mine</td>\n      <td>quarry</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>Lanzhou</th>\n      <td></td>\n      <td></td>\n      <td>quarry</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>Hohhot</th>\n      <td>iron mine</td>\n      <td></td>\n      <td>quarry</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>Xining</th>\n      <td></td>\n      <td></td>\n      <td>quarry</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>Yinchuan</th>\n      <td></td>\n      <td>oil mine</td>\n      <td>quarry</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>Changchun</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>aluminum mine</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>logging</td>\n    </tr>\n    <tr>\n      <th>Harbin</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>aluminum mine</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>logging</td>\n    </tr>\n    <tr>\n      <th>Exurbia City</th>\n      <td>iron mine</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>logging</td>\n    </tr>\n    <tr>\n      <th>Hazy Cloud</th>\n      <td></td>\n      <td>oil mine</td>\n      <td>quarry</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>logging</td>\n    </tr>\n    <tr>\n      <th>Milabo Port</th>\n      <td></td>\n      <td></td>\n      <td>quarry</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>copper mine</td>\n      <td>logging</td>\n    </tr>\n  </tbody>\n</table>\n<p>68 rows × 9 columns</p>\n</div>"
      },
-     "execution_count": 83,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,18 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "15f4e413",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mining.to_excel(\"output.xlsx\", sheet_name='Sheet1')\n",
-    "mining.to_csv(\"output2.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 96,
    "id": "4b2c2916",
    "metadata": {
     "scrolled": true
@@ -355,13 +344,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "id": "6b42673f-f4ba-4024-b7a7-b9aeb2d99dc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "combine = pd.concat([resource, mining], axis=1)\n",
-    "combine.to_csv(\"output3.csv\")"
+    "mining.to_csv(\"output2.csv\")\n",
+    "combine.to_csv(\"output3.csv\")\n",
+    "combine.to_excel(\"output.xlsx\", sheet_name='Sheet1')"
    ]
   }
  ],
